# geppetto

./: .gitignore  pyproject.toml  setup.py
geppetto/: __init__.py  geppetto.py  scheduler.py
geppetto/adapters/: __init__.py  lights.py  switch.py
geppetto/schemas/: configuration.geppetto.schema.json  configuration.tv4.json  se.novafaen.smrt.greeting.v1.json
tests/: test_geppetto.py
